--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bestie AI (DeepSeek Edition)</title>
+    <title>Bestie AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap');
@@ -59,7 +59,7 @@
         <header class="text-center mb-8">
             <h1 class="text-2xl font-extrabold tracking-tight text-white flex items-center justify-center gap-2">
                 <span class="w-3 h-3 bg-emerald-500 rounded-full animate-pulse"></span>
-                Bestie AI <span class="text-emerald-500 italic text-sm">DeepSeek</span>
+                Bestie AI <span class="text-emerald-500 italic text-sm">tes bang elah</span>
             </h1>
             <p id="sub-status" class="text-slate-500 text-[10px] mt-1 font-medium uppercase tracking-[0.2em]">Unlimited Curhat Session</p>
         </header>
