--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <script>
         // API Key Gemini dikosongkan untuk diisi environment, DeepSeek butuh key manual atau setup proxy
-        const geminiApiKey = ""; 
+        const geminiApiKey = "AIzaSyCqHJyUZtBxCMwCTwxVs4Y-FTEqDei7qZo"; 
         const deepseekApiKey = "sk-aa04aef169ae44f89efd76e6fc8e120c"; // Masukkan API Key DeepSeek lo di sini jika ingin running lokal
 
         const micBtn = document.getElementById('mic-btn');
